--- a/triangle.html
+++ b/triangle.html
@@ -32,9 +32,9 @@ const yonkoma = `紬	ジュリア	あずさ
 春香	未来	桃子	千早				
 可憐	麗花	美也	昴				
 昴	やよい	恵美					
-瑞希	育						
+瑞希	育					プロデューサー	
 真美	エレナ	紗代子	律子	美咲			
-貴音							
+貴音						プロデューサー	
 海美	環	律子					
 麗花	紗代子	奈緒	海美				
 このみ	未来	星梨花	莉緒				
@@ -45,13 +45,13 @@ const yonkoma = `紬	ジュリア	あずさ
 星梨花	静香	莉緒					
 エミリー	歌織	真					
 亜利沙	海美	可奈					
-律子	可憐	雪歩					
+律子	可憐	雪歩				プロデューサー	
 	茜	美咲					
 エレナ	琴葉	恵美					
 響	貴音	紬					
 朋花	亜利沙						
 やよい	千鶴	伊織					
-莉緒	翼						
+莉緒	翼					プロデューサー	
 伊織	志保	美希	昴	環			
 まつり	歩	莉緒	美咲				
 茜	ジュリア	エミリー					
@@ -62,32 +62,32 @@ const yonkoma = `紬	ジュリア	あずさ
 奈緒	美奈子						
 未来	奈緒	海美	美奈子	可奈			
 静香	紗代子	環					
-翼	春香						
+翼	春香					プロデューサー	
 千鶴	ひなた	昴					
-このみ	莉緒						
+このみ	莉緒					プロデューサー	
 雪歩	桃子	千鶴					
-杏奈	歌織						
+杏奈	歌織					プロデューサー	
 恵美	海美	可憐					
 百合子	杏奈	雪歩					
 エレナ	美也	琴葉	恵美				
 志保	桃子	可奈					
 千早	亜利沙	茜					
 美奈子	ひなた	育	このみ	真美			
-風花	エミリー	このみ					
+風花	エミリー	このみ				プロデューサー	
 紗代子	紬	百合子					
 まつり	美也	朋花					
 環	瑞希						
 真美	雪歩	ひなた	育				
-桃子	星梨花	育					
+桃子	星梨花	育				プロデューサー	
 美也	可奈	育					
 莉緒	このみ	風花					
 やよい	未来	静香	翼				
-伊織							
+伊織						プロデューサー	
 歩	亜美	律子					
 亜利沙	翼	ジュリア					
 真	星梨花						
 ひなた	まつり	亜利沙					
-紬	のり子						
+紬	のり子					プロデューサー	
 瑞希	貴音	桃子					
 可憐	瑞希						
 朋花	育						
@@ -95,7 +95,7 @@ const yonkoma = `紬	ジュリア	あずさ
 海美	琴葉	杏奈					
 ロコ	やよい						
 紗代子	翼						
-麗花	茜	ロコ	ジュリア				
+麗花	茜	ロコ	ジュリア			プロデューサー	
 やよい	星梨花	伊織					
 千鶴	ロコ	雪歩	桃子				
 あずさ	静香	千早					
@@ -107,17 +107,17 @@ const yonkoma = `紬	ジュリア	あずさ
 未来	茜	麗花					
 育	美咲	小鳥					
 美也	茜	美咲					
-紬	奈緒	雪歩	エレナ	可憐	恵美	春香	
+紬	奈緒	雪歩	エレナ	可憐	恵美、春香		
 茜	麗花	美也	歩				
 昴	ロコ	朋花	百合子				
 奈緒	未来	杏奈	響	風花			
 このみ	美咲						
 静香	翼	志保	亜利沙				
 千早	このみ						
-琴葉	亜美	真美					
-海美	美奈子	紬					
+琴葉	亜美	真美				プロデューサー	
+海美	美奈子	紬				プロデューサー	
 亜美	律子	まつり	朋花				
-朋花	千鶴	美希					
+朋花	千鶴	美希				プロデューサー	
 まつり	亜利沙						
 美也	桃子						
 エミリー	ロコ	可奈	貴音				
@@ -141,7 +141,7 @@ const yonkoma = `紬	ジュリア	あずさ
 育	百合子	亜利沙					
 麗花	瑞希						
 未来	小鳥						
-可憐	茜	翼					
+可憐	茜	翼				プロデューサー	
 春香	美希	奈緒					
 ひなた	莉緒						
 あずさ	伊織	亜美					
@@ -156,22 +156,22 @@ const yonkoma = `紬	ジュリア	あずさ
 莉緒	風花	歌織					
 育	歌織	このみ					
 紗代子	恵美	ジュリア					
-エミリー	伊織	紬	貴音	まつり	雪歩	亜美	真美
+エミリー	伊織	紬	貴音	まつり	雪歩、亜美、真美		
 千鶴	静香						
 環	伊織	千鶴	貴音	ひなた			
 瑞希	翼	このみ	莉緒				
 響	海美	可奈	貴音				
 可奈	志保						
 美奈子	ロコ						
-茜							
+茜						プロデューサー	
 真美	のり子						
 杏奈	百合子						
 まつり	歩	朋花	貴音	星梨花			
 ジュリア	翼						
-風花	ひなた	海美					
+風花	ひなた	海美					社長
 琴葉	恵美	エレナ					
 ひなた	星梨花						
-亜利沙	奈緒	小鳥					
+亜利沙	奈緒	小鳥					そら
 やよい	律子	百合子					
 美希	紗代子	律子	美也				
 響	環	海美	律子				
@@ -184,7 +184,7 @@ const yonkoma = `紬	ジュリア	あずさ
 ジュリア	可奈	環	育	恵美	琴葉		
 紗代子	百合子						
 亜美	真美	志保					
-真							
+真							そら
 春香	美希	エミリー					
 恵美	亜利沙	美奈子					
 奈緒	海美	美奈子	紗代子	のり子			
@@ -193,9 +193,9 @@ const yonkoma = `紬	ジュリア	あずさ
 歌織	このみ						
 のり子	桃子	春香					
 あずさ	麗花	美也					
-美奈子	可奈						
+美奈子	可奈					プロデューサー	
 ロコ	杏奈						
-まつり	美咲						
+まつり	美咲					プロデューサー	
 美也	杏奈	静香					
 エレナ	美也	莉緒					
 麗花	茜	志保					
@@ -204,13 +204,13 @@ const yonkoma = `紬	ジュリア	あずさ
 雪歩	桃子						
 響	亜美	真美	貴音	瑞希			
 星梨花	このみ	莉緒					
-百合子							
-杏奈	未来	ロコ	奈緒	星梨花	百合子		
+百合子						プロデューサー	
+杏奈	未来	ロコ	奈緒	星梨花	百合子	プロデューサー	
 星梨花	亜利沙	恵美	あずさ	昴	美咲		
 静香	未来						
 春香	未来	亜利沙	千早				
 海美	琴葉						
-翼	美咲						
+翼	美咲					プロデューサー	
 瑞希	美奈子						
 昴	伊織	恵美					
 風花	歩	美咲					
@@ -220,7 +220,7 @@ const yonkoma = `紬	ジュリア	あずさ
 未来	昴	静香	翼				
 可奈	杏奈						
 瑞希	志保	紬					
-雪歩	貴音	静香	千鶴				
+雪歩	貴音	静香	千鶴			プロデューサー	
 静香	未来	翼					
 亜美	琴葉	真美					
 ロコ	響	美咲					
@@ -229,10 +229,10 @@ const yonkoma = `紬	ジュリア	あずさ
 のり子	美希	奈緒	桃子				
 やよい	ロコ	ジュリア					
 莉緒	真						
-風花							
+風花						プロデューサー	
 海美	奈緒	のり子	紗代子	美奈子			
 昴	このみ						
-このみ	翼						
+このみ	翼					プロデューサー	
 エミリー	伊織						
 恵美	歌織	琴葉					
 春香	翼	桃子	茜				
@@ -245,12 +245,12 @@ const yonkoma = `紬	ジュリア	あずさ
 桃子	まつり						
 このみ	小鳥	美咲					
 千鶴	エレナ	星梨花					
-志保							
+志保						プロデューサー	
 琴葉	美也	ジュリア					
 真美	可憐	春香					
 莉緒	朋花						
-育							
-伊織	志保	千鶴					
+育						プロデューサー	
+伊織	志保	千鶴				プロデューサー	
 茜	亜利沙	ジュリア					
 百合子	朋花	昴	ロコ				
 紗代子	あずさ	海美	貴音	環			
@@ -263,8 +263,8 @@ const yonkoma = `紬	ジュリア	あずさ
 環	亜利沙	小鳥					
 ジュリア	茜						
 未来	まつり						
-真	まつり						
-恵美							
+真	まつり					プロデューサー	
+恵美						プロデューサー	
 朋花	恵美						
 美也	エレナ	茜					
 まつり	美也	朋花					
@@ -272,10 +272,10 @@ const yonkoma = `紬	ジュリア	あずさ
 紬	美奈子						
 未来	ひなた	星梨花					
 エレナ	琴葉						
-静香							
+静香						プロデューサー	
 茜	千早	麗花					
 環	琴葉	亜利沙	小鳥				
-春香	千早	美希	志保	可奈			
+春香	千早	美希	志保	可奈		プロデューサー	
 やよい	美奈子	このみ					
 海美	紗代子						
 昴	志保						
@@ -291,7 +291,7 @@ const yonkoma = `紬	ジュリア	あずさ
 瑞希	桃子	このみ					
 翼	可憐	茜					
 可奈	琴葉	未来	春香				
-恵美	美咲						
+恵美	美咲					プロデューサー	
 美希	歩						
 朋花	歌織	杏奈					
 星梨花	静香	このみ					
@@ -301,12 +301,12 @@ const yonkoma = `紬	ジュリア	あずさ
 まつり	ひなた						
 莉緒	杏奈	百合子					
 風花	莉緒						
-奈緒	歩						
+奈緒	歩					プロデューサー	
 ロコ	未来						
 あずさ	このみ	莉緒					
-のり子							
+のり子						プロデューサー	
 ひなた							
-紬	エミリー						
+紬	エミリー					プロデューサー	
 海美	春香						
 昴	まつり						
 このみ	莉緒	亜美	ロコ				
@@ -320,19 +320,19 @@ const yonkoma = `紬	ジュリア	あずさ
 育	莉緒						
 エミリー	まつり						
 亜美	律子	風花					
-伊織	エミリー						
+伊織	エミリー					プロデューサー	
 響	恵美						
 千鶴	環						
 雪歩	海美	育	歩				
 エレナ	千鶴	ひなた					
 ジュリア	麗花						
-のり子	美咲						
+のり子	美咲						そら
 このみ	美希	静香					
 美希	麗花	小鳥					
 琴葉	朋花	恵美					
 桃子	杏奈	春香					
-美奈子							
-瑞希							
+美奈子						プロデューサー	
+瑞希						プロデューサー	
 百合子	紗代子	海美					
 美也	ひなた	可憐	星梨花				
 莉緒	このみ	風花	貴音				
@@ -340,19 +340,19 @@ const yonkoma = `紬	ジュリア	あずさ
 まつり							
 奈緒	歩	志保					
 ひなた	亜利沙						
-恵美							
+恵美						プロデューサー	
 麗花	琴葉	茜					
 歌織	莉緒	このみ					
-紬							
+紬						プロデューサー	そら
 可奈	貴音	志保	静香				
 やよい	伊織						
-紗代子							
+紗代子						プロデューサー	
 真美	亜美						
 ロコ	亜美	静香	翼				
-杏奈	のり子						
+杏奈	のり子					プロデューサー	
 茜	ロコ						
 律子	茜						
-百合子	美咲						
+百合子	美咲					プロデューサー	
 杏奈	百合子	ロコ					
 亜利沙	恵美	可奈					
 千早	律子	春香					
@@ -363,34 +363,34 @@ const yonkoma = `紬	ジュリア	あずさ
 真	雪歩						
 歩	まつり						
 美也	朋花	まつり					
-海美							
+海美						プロデューサー	
 環	恵美	響					
-朋花	春香	恵美					
+朋花	春香	恵美				プロデューサー	
 星梨花	奈緒						
 翼	未来	静香	美希				
 貴音	ひなた						
 奈緒	美奈子						
-茜	ジュリア	麗花					
+茜	ジュリア					プロデューサー	
 律子	亜美	真美					
 伊織	美奈子	やよい	瑞希				
 ひなた	伊織						
 可奈	千早	ジュリア					
 風花	このみ	春香					
 育	桃子						
-亜美	真美						
-美也							
-ロコ	千鶴	茜					
+亜美	真美					プロデューサー	
+美也						プロデューサー	
+ロコ	千鶴	茜				プロデューサー	
 静香	星梨花	亜利沙					
 麗花	亜利沙	海美					
-莉緒							
+莉緒						プロデューサー	
 エミリー	朋花	紬					
-歩	恵美	瑞希					
+歩	恵美	瑞希				プロデューサー	
 伊織	朋花	昴					
 可奈	歌織						
 美希	真						
 百合子	小鳥	律子					
-千早	エミリー	美希					
-翼							
+千早	エミリー	美希				プロデューサー	
+翼						プロデューサー	
 朋花	響						
 ひなた	茜	静香					
 桃子	律子	育	環				
@@ -410,17 +410,17 @@ const yonkoma = `紬	ジュリア	あずさ
 琴葉	美奈子	のり子					
 春香	千早						
 環	育	桃子					
-ジュリア	真	紬					
-翼	莉緒	まつり					
+ジュリア	真	紬	プロデューサー				
+翼	莉緒	まつり	プロデューサー				
 海美	杏奈	ロコ					
-このみ							
+このみ	プロデューサー						
 玲音	美咲	小鳥					
 詩花	黒井社長	亜利沙	響				
 雪歩	真	伊織					
 恵美	エレナ	琴葉					
 玲音	育	響	亜利沙				
 志保	亜美	真美					
-エレナ							
+エレナ	プロデューサー						
 詩花	莉緒	このみ	黒井社長	玲音			
 歩	杏奈						
 茜	志保	麗花					
@@ -430,22 +430,22 @@ const yonkoma = `紬	ジュリア	あずさ
 昴							
 美也	エレナ	亜利沙	桃子				
 律子	美希						
-あずさ							
+あずさ						プロデューサー	
 美奈子	育						
 未来	志保						
-朋花							
+朋花						プロデューサー	
 茜	紬						
 可奈	未来						
-風花	茜	奈緒					
+風花	茜	奈緒				プロデューサー	
 ロコ	昴	美咲					
 育	小鳥						
 瑞希	歩	杏奈					
 歩							
-春香	玲音	詩花					
+春香							
 紗代子	海美						
 昴	百合子	杏奈					
-美希	春香						
-のり子	奈緒						
+美希	春香					プロデューサー	
+のり子	奈緒					プロデューサー	
 エミリー	紬	百合子					
 真	小鳥	美咲	ひなた				
 ひなた	真						
@@ -457,11 +457,11 @@ const yonkoma = `紬	ジュリア	あずさ
 律子	可憐	真美	亜美				
 未来	静香						
 琴葉	エレナ	恵美					
-亜美	春香	真美	茜				
+亜美	春香		茜				
 ロコ	紬						
-翼	環						
-伊織	環	律子	美咲				
-環	紗代子						
+翼	環					プロデューサー	
+伊織	環	律子					
+環	紗代子					プロデューサー	
 亜利沙							
 麗花	育						
 奈緒	育						
@@ -472,8 +472,8 @@ const yonkoma = `紬	ジュリア	あずさ
 杏奈	未来	可奈	翼	やよい			
 律子	亜美	あずさ	伊織				
 歌織	このみ	風花	莉緒				
-亜美							
-百合子							
+亜美						プロデューサー	
+百合子							そら
 桃子	莉緒						
 真美	亜美						
 恵美	紬						
@@ -482,89 +482,254 @@ const yonkoma = `紬	ジュリア	あずさ
 茜	ジュリア						
 美也	琴葉						
 海美	環	恵美					
-響							
-志保							
+響						プロデューサー	
+志保							社長
 千鶴	環						
-翼							
-琴葉	まつり						
-莉緒	美咲						
+翼						プロデューサー	
+琴葉	まつり					プロデューサー	
+莉緒	美咲					プロデューサー	
 風花	このみ	莉緒					
 可奈	貴音	ジュリア					
 伊織	美希						
-千早	紗代子						
-紗代子							
+千早						プロデューサー	
+紗代子						プロデューサー	
 瑞希	貴音	杏奈	雪歩				
-やよい	志保						
+やよい	志保						社長
 志保	伊織						
 莉緒	ジュリア						
 美奈子	奈緒	恵美					
 エレナ	風花						
 貴音	可奈	百合子					
-エミリー	雪歩						
+エミリー	雪歩					プロデューサー	
 恵美							
-星梨花	未来	静香					
+星梨花	未来	静香				プロデューサー	
 のり子	琴葉	亜美					
 育	美奈子						
 杏奈	亜利沙						
 可憐	律子						
 このみ	星梨花	やよい					
-ロコ	翼						
+ロコ	翼	プロデューサー					
 桃子	のり子	奈緒					
-亜利沙	恵美	可憐	奈緒				
-朋花							
-あずさ	ひなた	雪歩					
+亜利沙	恵美	可憐					
+朋花							そら
+あずさ	ひなた	雪歩					そら
 千鶴	昴	のり子					
 雪歩	貴音						
-紬							
+紬						プロデューサー	
 歌織							
 歩	まつり	律子	桃子				
 ジュリア	百合子	響	杏奈				
 琴葉	杏奈	ジュリア					
 風花	琴葉	莉緒	このみ				
 星梨花	静香	小鳥					
-歩							
+歩						プロデューサー	
 春香	瑞希						
 歌織	風花	美咲					
 紗代子	奈緒						
 千早	美也	静香					
 まつり	瑞希	エレナ					
 麗花	茜						
-真							
+真						プロデューサー	
 紬							
 ひなた	歌織						
 未来	静香	響	春香				
 律子	真美	亜美					
 美希	春香						
-奈緒							
-茜	律子	奈緒					
+奈緒						プロデューサー	
+茜	律子						
 紗代子							
 千鶴	小鳥	美咲	ロコ				
 環	莉緒	歌織					
 琴葉	昴						
 亜美	真	美希					
 真美	小鳥						
-恵美	美咲	エレナ	琴葉	このみ	あずさ		
+恵美		エレナ	琴葉	このみ	あずさ		
 美奈子							
 美希	ジュリア						
-雪歩	真	春香	可憐	百合子	桃子		
-あずさ	莉緒	律子					
+雪歩							そら
+あずさ	莉緒	律子				プロデューサー	そら
 千早	亜美	真美	琴葉	律子			
 可憐	春香	亜利沙					
 瑞希	このみ						
-美也							
+美也						プロデューサー	
 春香	千早	亜美	真美				
 やよい	育						
 昴	のり子	百合子	翼				
-奈緒							
-このみ							
+奈緒						プロデューサー	
+このみ						プロデューサー	
 麗花	律子	歩					
 真美	亜美						
 静香	茜	ジュリア					
-育	桃子	環					
+育	桃子	環				プロデューサー	そら
 朋花	エミリー	紬	まつり				
 海美	エレナ						
 亜美	真美						
-真	響						`;
+真	響						そら
+歌織						プロデューサー	
+昴	百合子						
+美奈子	奈緒					プロデューサー	
+伊織	小鳥						
+百合子							
+貴音	エミリー						
+杏奈	星梨花	環	ひなた				
+ひなた	茜						
+エミリー	雪歩						
+静香	未来						
+ロコ	このみ						
+このみ	ロコ						
+響	環						
+ジュリア	桃子	麗花					
+エレナ	琴葉	紬					
+千早	響						
+紗代子	海美						
+美也	静香	歌織	杏奈				
+可奈	志保						
+瑞希	雪歩						
+杏奈						プロデューサー	
+千鶴	紬						
+まつり	美咲						
+琴葉	春香					プロデューサー	
+紬	エミリー	星梨花					
+真美	亜美					プロデューサー	
+真						プロデューサー	
+翼	まつり	恵美	貴音				
+海美	瑞希						
+ロコ	昴						
+環	美咲	風花				プロデューサー	
+桃子	亜利沙	風花					
+真美	雪歩	のり子					
+亜利沙	春香	未来					
+歩							
+このみ	真	可憐					
+響	春香	やよい					
+麗花	貴音						
+貴音	麗花	エミリー					
+千早	春香	可憐					そら
+まつり	莉緒	歩					
+桃子	莉緒	育	環				
+麗花	瑞希	このみ					
+静香	未来						
+亜利沙	美也	杏奈					
+歌織	百合子	亜利沙	静香				
+伊織	亜美						
+未来						プロデューサー	
+美也						プロデューサー	
+律子	歌織		茜				
+可憐	真	伊織					
+志保	育						
+育	志保						
+可奈	響						
+のり子	あずさ	亜利沙					
+あずさ	のり子						
+恵美							
+エレナ	琴葉					プロデューサー	
+百合子	千鶴					プロデューサー	
+春香	琴葉						
+杏奈	海美						
+朋花	伊織						
+志保	茜						
+やよい						プロデューサー	
+紗代子							
+亜美	志保					プロデューサー	
+瑞希	亜利沙					プロデューサー	そら
+星梨花	千鶴					プロデューサー	
+千鶴	星梨花						
+茜							
+朋花						プロデューサー	
+海美	莉緒	このみ					
+歌織						プロデューサー	
+昴	ロコ	律子	琴葉				
+美希	響						
+エミリー	響						
+真	雪歩		美希	亜利沙		プロデューサー	
+莉緒	静香						
+茜	ジュリア						
+まつり	ジュリア						
+歩	まつり	莉緒					
+美奈子	風花						
+風花	美奈子					プロデューサー	
+千早	百合子						
+瑞希						プロデューサー	
+真美						プロデューサー	
+奈緒	桃子	育					
+このみ	伊織	風花				プロデューサー	
+響	千早						
+あずさ	真						
+恵美	エレナ						
+ロコ							
+可奈							
+美也							プロデューサー
+伊織							
+美希	ジュリア	プロデューサー					
+ジュリア	まつり						
+紗代子	風花	詩花、育					
+亜利沙	プロデューサー						
+昴	プロデューサー						
+紬	歌織						
+環	琴葉	海美					
+エミリー	ひなた	プロデューサー					
+翼	志保						
+育	美希						
+麗花	桃子						
+貴音	育						
+春香							
+可憐	恵美						
+静香	育						
+杏奈	ロコ						
+千早	雪歩						
+雪歩	真美	千早					
+真	歩						
+琴葉							
+翼	プロデューサー	未来					
+ジュリア	可憐	プロデューサー					
+エレナ	志保	静香	亜利沙				
+百合子	杏奈						
+星梨花	茜						
+莉緒	このみ	麗花	プロデューサー				
+歌織	麗花	真美					
+律子	プロデューサー						
+響	茜	紬	風花				
+ひなた	プロデューサー	そら					
+静香	エミリー	プロデューサー					
+エミリー	静香						
+亜利沙	朋花						
+百合子	律子	杏奈	プロデューサー				
+あずさ	プロデューサー						
+朋花	千鶴						
+海美	ロコ						
+瑞希	響						
+風花	プロデューサー	莉緒	歌織				
+美奈子	星梨花	育	小鳥	プロデューサー			
+奈緒	プロデューサー						
+貴音	美咲						
+美希	風花	このみ	プロデューサー				
+春香	千早	桃子					
+ひなた	まつり						
+まつり	ひなた						
+ロコ	千早						
+千鶴	亜美						
+亜美	プロデューサー	千鶴					
+志保	紬	まつり					
+響	プロデューサー						
+やよい							
+千鶴							
+紬	茜						
+奈緒	プロデューサー	貴音	海美	麗花			
+亜美	あずさ	恵美	美奈子	このみ			
+エレナ	海美	環	美也				
+のり子	紗代子						
+育	環	小鳥	プロデューサー				
+昴	ロコ						
+このみ	朋花						
+朋花	このみ						
+琴葉	小鳥						
+未来							
+莉緒	プロデューサー						
+麗花	伊織	可奈					
+律子	風花	紬	千鶴				
+まつり	環	昴					
+茜	星梨花	恵美					
+歩	プロデューサー						`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
