キーワード絞り込みのテスト実装

--- a/4koma.html
+++ b/4koma.html
@@ -205,6 +205,13 @@ img.referred {
 						<div class="form-check"><input class="form-check-input" type="checkbox" id="show_whole_picture" checked>🖼️</div>
 					</div>
 				</div>
+
+				<!--自由キーワードでフィルターする機能のテスト実装-->
+				<div class="dropdown_container" title="キーワード" style="width: 100px;">
+					<select id="keywords" class="form-select">
+						
+					</select>
+				</div>
 				
 			</ul>
         </div>
