twitter引用をxに対応

--- a/triangle.html
+++ b/triangle.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>4コマに見る三角関係</title>
+	<title>4コマに見る人間関係</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet">
     <style type="text/css">
       #network {
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 </head>
 <body>
-	<h1>4コマに見る三角関係</h1>
+	<h1>4コマに見る人間関係</h1>
 
 	<ul>
 		<li>ミリシタ4コマに登場するアイドルを集計し、好意の向きを可視化しました。</li>
@@ -25,8 +25,8 @@
 	</ul>
 	<div id="network"></div>
 <script>
-const yonkoma = `紬	ジュリア	あずさ					
-歌織	星梨花	莉緒					
+const yonkoma = `歌織	星梨花	莉緒					
+紬	ジュリア	あずさ					
 千早	静香	可奈	春香	美咲			
 奈緒	美奈子	紬					
 春香	未来	桃子	千早				
@@ -52,7 +52,7 @@ const yonkoma = `紬	ジュリア	あずさ
 朋花	亜利沙						
 やよい	千鶴	伊織					
 莉緒	翼					プロデューサー	
-伊織	志保	美希	昴	環			
+伊織	志保	美希	昴	環			うさちゃん
 まつり	歩	莉緒	美咲				
 茜	ジュリア	エミリー					
 琴葉	恵美	美也	海美	環			
@@ -99,7 +99,7 @@ const yonkoma = `紬	ジュリア	あずさ
 やよい	星梨花	伊織					
 千鶴	ロコ	雪歩	桃子				
 あずさ	静香	千早					
-志保	環	風花					
+志保	環	風花					こぶん
 可奈	歌織	紗代子					
 ジュリア	静香	未来	翼				
 のり子	環	奈緒					
@@ -216,14 +216,14 @@ const yonkoma = `紬	ジュリア	あずさ
 風花	歩	美咲					
 真	奈緒						
 美希	歩	律子					
-志保	伊織						
+志保	伊織						うさちゃん
 未来	昴	静香	翼				
 可奈	杏奈						
 瑞希	志保	紬					
 雪歩	貴音	静香	千鶴			プロデューサー	
 静香	未来	翼					
 亜美	琴葉	真美					
-ロコ	響	美咲					
+ロコ	響	美咲					ハム蔵
 律子	昴						
 桃子	育	環	美咲				
 のり子	美希	奈緒	桃子				
@@ -439,7 +439,7 @@ const yonkoma = `紬	ジュリア	あずさ
 風花	茜	奈緒				プロデューサー	
 ロコ	昴	美咲					
 育	小鳥						
-瑞希	歩	杏奈					
+瑞希	歩	杏奈					リトルミズキ
 歩							
 春香							
 紗代子	海美						
@@ -490,7 +490,7 @@ const yonkoma = `紬	ジュリア	あずさ
 莉緒	美咲					プロデューサー	
 風花	このみ	莉緒					
 可奈	貴音	ジュリア					
-伊織	美希						
+伊織	美希						うさちゃん
 千早						プロデューサー	
 紗代子						プロデューサー	
 瑞希	貴音	杏奈	雪歩				
@@ -595,7 +595,7 @@ const yonkoma = `紬	ジュリア	あずさ
 翼	まつり	恵美	貴音				
 海美	瑞希						
 ロコ	昴						
-環	美咲	風花				プロデューサー	
+環	美咲	風花				プロデューサー	こぶん
 桃子	亜利沙	風花					
 真美	雪歩	のり子					
 亜利沙	春香	未来					
@@ -653,7 +653,7 @@ const yonkoma = `紬	ジュリア	あずさ
 真美						プロデューサー	
 奈緒	桃子	育					
 このみ	伊織	風花				プロデューサー	
-響	千早						
+響	千早						ハム蔵
 あずさ	真						
 恵美	エレナ						
 ロコ							
@@ -729,7 +729,118 @@ const yonkoma = `紬	ジュリア	あずさ
 律子	風花	紬	千鶴				
 まつり	環	昴					
 茜	星梨花	恵美					
-歩	プロデューサー						`;
+歩	プロデューサー						
+風花							
+桃子	瑞希	美也					
+このみ	プロデューサー						
+海美	恵美	環					
+可奈	やよい	あずさ					
+やよい	可奈	真美	亜美				
+貴音	プロデューサー						
+茜	プロデューサー						
+伊織	プロデューサー	美希					
+風花	プロデューサー	このみ					
+未来	静香	翼					
+のり子	美希	昴	百合子				
+可憐	響	翼	プロデューサー				
+ひなた	茜	星梨花					
+環	プロデューサー	育	桃子				こぶん
+育	プロデューサー	亜利沙					
+真美	プロデューサー						
+莉緒	プロデューサー						
+杏奈	プロデューサー						
+亜利沙	律子	杏奈	プロデューサー				
+あずさ	百合子						
+雪歩	プロデューサー						
+歩	プロデューサー						
+静香	プロデューサー						
+美奈子	プロデューサー						
+翼	ジュリア	瑞希					
+雪歩	志保	可憐					
+やよい	千早	小鳥					
+琴葉	紬	エレナ					
+ジュリア	真美	亜美	プロデューサー				
+昴	律子	ジュリア					
+星梨花	小鳥						
+のり子	志保						
+紬	小鳥	百合子	エミリー	歌織			
+恵美	可憐						
+可憐	恵美						
+エレナ	桃子						
+千早	春香						
+エミリー	星梨花	亜美	真美				
+ロコ	瑞希						
+恵美	美咲	育	桃子				
+千早	静香						
+麗花	エミリー	春香					
+美奈子	プロデューサー	貴音					
+星梨花							
+美也	美希						
+真	美也						
+環	美奈子	桃子	歌織				
+ジュリア	プロデューサー						
+歌織	環	桃子					
+雪歩	千鶴	響					
+亜美							
+海美	プロデューサー						
+未来	春香						
+志保	歌織	琴葉	まつり				
+紗代子	瑞希						
+瑞希	紗代子						
+桃子	紬	プロデューサー					
+律子	真美						
+真美	律子						
+奈緒							
+やよい	プロデューサー						
+千鶴	莉緒	風花					
+紬	美咲						
+響	貴音	美希					
+貴音	春香	歩					
+育	プロデューサー						
+千鶴	やよい	可奈					
+美希	プロデューサー						
+星梨花	茜	麗花	志保	静香		でんでんむすくん	
+まつり							
+志保							
+歩	ロコ	麗花					
+翼	麗花	歩	ロコ	星梨花			
+のり子	プロデューサー						
+風花	プロデューサー						
+あずさ	プロデューサー						
+雪歩							
+春香	エレナ						
+エレナ	春香	桃子	環	育	小鳥		
+	環	桃子	育	プロデューサー			
+	環	桃子	育				
+星梨花	プロデューサー						
+律子	プロデューサー						
+朋花	昴	可憐					
+エミリー							
+未来	琴葉	昴					
+百合子	未来	風花	琴葉	志保			
+可憐	プロデューサー						
+千早	恵美						
+ひなた	杏奈	美奈子					
+奈緒	海美	桃子	プロデューサー	杏奈	瑞希		
+可奈	伊織	静香					
+亜利沙	真	可奈	伊織				
+昴							
+杏奈	百合子	恵美	奈緒				
+真	千早	桃子	志保	プロデューサー			
+琴葉	プロデューサー						
+翼	莉緒	プロデューサー					
+莉緒	翼						
+	恵美	海美	可憐	杏奈	翼	雪歩	まつり
+紗代子	プロデューサー						
+美也	プロデューサー						
+このみ	まつり						
+瑞希	このみ						
+響	茜	プロデューサー					
+茜	響						
+歩	プロデューサー						
+春香	美希	プロデューサー					
+千鶴	プロデューサー						
+風花	プロデューサー						`;
 const idols_text = `春香	haruka	#e22b30
 千早	chihaya	#2743d2
 美希	miki	#b4e04b
@@ -939,7 +1050,7 @@ for (let idol of idols){
 		size: 30,
 		color: idol_attr[idol].color,
 		borderWidth: 2,
-		value: liked[idol],
+		//value: liked[idol],
 		scaling: {
 			max: 40,
 			min: 15,
